# noisy-gates-approach-runs

./: .gitignore  README.md  main_noisy_gates.py  main_qiskit.py  main_real_hardware.py  main_real_hardware_11_to_13.py  main_real_hardware_14.py  main_real_hardware_test_access.py  main_real_hardware_test_device_parameters.py  main_test_real_hardware.py  pyproject.toml  setup.cfg  setup.py
configuration/: noisy_gates.json  noisy_gates_configuration.json  qiskit.json  qiskit_configuration.txt  real_hardware_11_to_13.json  real_hardware_14.json  real_hardware_configuration.txt  test_noisy_gates.json  test_qiskit.json  test_real_hardware.json
results/noisy_gates/device_parameters/: README.md
results/real_hardware_11_to_13/device_parameters/: README.md
results/test_real_hardware/device_parameters/: T1.txt  T2.txt  metadata.json  p.txt  p_cnot.txt  rout.txt
src/: utilities.py
