[metadata]
name = quantum-gates
version = 1.0.4
author = M. Grossi, G. D. Bartolomeo, M. Vischi, R. Wixinger
author_email = michele.grossi@cern.ch, dibartolomeo.giov@gmail.com, vischimichele@gmail.com, roman.wixinger@gmail.com
description = Runs of the Quantum Noisy Gates Simulation with Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/romanwixinger/noisy-gates-approach-runs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir =
    = src
packages=find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    qiskit==0.43.0
    qiskit-ibm-provider==0.5.3
    scipy
    matplotlib
    pylatexenc
    opt-einsum
    quantum_gates==1.0.4

[options.extras_require]
demo =
    jupyter


